--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,5 +29,6 @@ subjects:
 - !lcc 'D501'
 - !lcsh 'World War, 1914-1918 -- Campaigns -- Turkey -- Gallipoli Peninsula'
 - !lcsh 'World War, 1914-1918 -- New Zealand'
+- GITenberg
 title: New Zealanders at Gallipoli
 url: http://www.gutenberg.org/ebooks/45354
